# fusion-router

./: .env.example  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  QUICKSTART.md  README.md  deny.toml
.github/workflows/: ci.yml
benches/: cache.rs  compilation.rs
config/: default.yaml
config/policies/: example.yaml
config/resources/: global.yaml
docs/adr/: ADR-001-foundation.md  ADR-002-planner.md  ADR-003-compiler.md  ADR-004-scheduler.md  ADR-005-provider-abstraction.md  ADR-006-dag-support.md  ADR-013-workflow-registry.md  ADR-014-workflow-planner.md  ADR-015-dynamic-workflow.md  ADR-016-intent-oriented-execution.md
docs/architecture/: invariants.md  runtime.md  specification.md
docs/implementation/: milestones.md  roadmap.md
docs/specifications/: compiler-passes.md  execution-graph.md  provider-api.md  strategy-api.md  transport-api.md  workflow-ir.md
docs/superpowers/plans/: 2026-07-17-advanced-tool-ecosystem.md  2026-07-17-production-hardening.md
docs/superpowers/specs/: 2026-07-17-production-hardening-design.md
examples/opencode/: opencode.json
plugins/example-provider/: Cargo.toml  example-provider.toml
plugins/example-provider/src/: lib.rs
scripts/: setup-opencode.ps1  setup-opencode.sh
src/: config.rs  lib.rs  main.rs
src/cache/: embeddings.rs  mod.rs  semantic_cache.rs
src/compiler/: mod.rs  passes.rs
src/context/: assembler.rs
src/executor/: mod.rs
src/middleware/: auth.rs  cors.rs  rate_limit.rs  request_id.rs
src/models/: mod.rs
src/planner/: dynamic_planner.rs  intent_planner.rs  mod.rs  simple.rs  workflow.rs
src/plugin/: manager.rs  manifest.rs  mod.rs
src/providers/: circuit_breaker.rs  circuit_breaking_provider.rs  mod.rs  ollama.rs  ollama_model.rs  openrouter.rs  openrouter_model.rs  router.rs  zen.rs  zen_model.rs
src/requirements/: extractor.rs
src/resource/: mod.rs
src/scheduler/: default.rs  mod.rs  work_queue.rs
src/server/: handlers.rs  health.rs  mod.rs
src/strategies/: chain.rs  consensus.rs  debate.rs  mod.rs  react.rs  reflection.rs  single.rs
src/telemetry/: audit.rs  metrics.rs  mod.rs  sqlite_repo.rs  tracing.rs
src/tools/: builtin.rs  http_tool.rs  mod.rs  registry.rs  shell_tool.rs
src/transport/: backoff.rs  http.rs  mod.rs  stdio.rs  websocket.rs
src/types/: execution.rs  mod.rs
src/workflow/: mod.rs  registry.rs
tests/: load_test.rs
tests/golden/: compiler.rs  dag.rs  mod.rs  plugin.rs  strategy.rs  tool_execution.rs
tests/golden/data/: simple_ir_to_graph.json
tests/integration/: env_check.rs  mod.rs  opencode.rs
tests/replay/: mod.rs
tests/unit/: context.rs  mod.rs  requirements.rs
workflows/: chat.yaml  code-review.yaml  research.yaml
