[package]
name = "fusion-router"
version = "0.7.0"
edition = "2021"

[workspace]
members = ["plugins/example-provider"]

[dependencies]
libloading = "0.8"
toml = "0.8"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
reqwest = { version = "0.11", features = ["json", "stream"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1"
meval = "0.2"
parking_lot = "0.12"
prometheus = { version = "0.13", features = ["process"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
dashmap = "5"
futures = "0.3"
moka = { version = "0.12", features = ["future"] }
rusqlite = { version = "0.29", features = ["bundled"] }
schemars = "0.8"
dotenv = "0.15"

[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1"
wiremock = "0.5"
dotenv = "0.15"
